syntax = "proto3";
package DataProto;
service FormData{
    rpc DoFormat(Data) returns (Data){}
}
message Data{
    string text = 1;
}

